# openenv-cyber-threat-detection

./: Dockerfile  README.md  baseline_agent.py  dashboard_soc.py  environment.py  explain.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
