[project]
name = "cyber-threat-detection-env"
version = "0.1.0"
description = "Cyber Threat Detection OpenEnv Environment"
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
